--- a/reserve.html
+++ b/reserve.html
@@ -17,11 +17,11 @@
             <hr>
             <h3 class="text-center">Make your reservation</h3>
             <div class="text-center">
-                <a href="/table">
-                    <button type="button" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
+                <a href="/tables&waitlist">
+                    <button type="button" class="btn btn-primary btn-lg" id="tablebutton"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
                 </a>
-                <a href="/index">
-                    <button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home"></span></button>
+                <a href="/">
+                    <button type="button" class="btn btn-default btn-lg" id="homebutton"><span class="glyphicon glyphicon-home"></span></button>
                 </a>
             </div>
         </div>
@@ -63,7 +63,30 @@
             <a href="/api/waitlist">API Wait List</a>
         </div>
     </div>
-    </div>
+    <script type="text/javascript">
+    // $("#tablebutton").on("click", function() {
+    //     $.get("/all", function(data) {});
+    // });
+    // $("#homebutton").on("click", function() {
+    //     $.get("/", function(data) {});
+    // });
+    $("#add-btn").on("click", function(event) {
+        event.preventDefault();
+
+        var newReservation = {
+            name: $("#name").val().trim(),
+            phone: $("#phone").val().trim(),
+            email: $("#email").val().trim(),
+            uniqueID: $("#uniqueID").val().trim()
+        };
+
+        $.post("/api/tables", newReservation)
+            .done(function(data) {
+                console.log(data);
+                alert("Adding reservation...");
+            });
+    });
+    </script>
 </body>
 
 </html>
