--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <hr>
             <h3 class="text-center">We only have 5 tables! Book your seat before they all are gone!</h3>
             <div class="text-center">
-                <a href="/tables&waitlist">
+                <a href="/all">
                     <button type="button" class="btn btn-primary btn-lg" id="tablebutton"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
                 </a>
                 <a href="/add">
@@ -31,12 +31,6 @@
         <a id="waitlist" href="/api/waitlist">API Wait List</a>
     </div>
     <script type="text/javascript">
-    // $("#tablebutton").on("click", function() {
-    //     $.get("/all", function(data) {});
-    // });
-    // $("#reservebutton").on("click", function() {
-    //     $.get("/add", function(data) {});
-    // });
     $("#apitable").on("click", function() {
         $.get("/api/tables", function(data) {});
     });
