--- a/reserve.html
+++ b/reserve.html
@@ -17,7 +17,7 @@
             <hr>
             <h3 class="text-center">Make your reservation</h3>
             <div class="text-center">
-                <a href="/tables&waitlist">
+                <a href="/all">
                     <button type="button" class="btn btn-primary btn-lg" id="tablebutton"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
                 </a>
                 <a href="/">
@@ -64,23 +64,17 @@
         </div>
     </div>
     <script type="text/javascript">
-    // $("#tablebutton").on("click", function() {
-    //     $.get("/all", function(data) {});
-    // });
-    // $("#homebutton").on("click", function() {
-    //     $.get("/", function(data) {});
-    // });
     $("#add-btn").on("click", function(event) {
         event.preventDefault();
 
-        var newReservation = {
+        var newreservation = {
             name: $("#name").val().trim(),
             phone: $("#phone").val().trim(),
             email: $("#email").val().trim(),
             uniqueID: $("#uniqueID").val().trim()
         };
 
-        $.post("/api/tables", newReservation)
+        $.post("/api/newreservation", newreservation)
             .done(function(data) {
                 console.log(data);
                 alert("Adding reservation...");
