--- a/tables.html
+++ b/tables.html
@@ -15,7 +15,7 @@
         <div class="jumbotron">
             <h1 class="text-center"><span class="glyphicon glyphicon-fire"></span>Hot Restaurant</h1>
             <hr>
-            <h3 class="text-center">We only have 5 tables! Book your seat before they all are gone!</h3>
+            <h3 class="text-center">Current Reservations and Waiting List</h3>
             <div class="text-center">
                 <a href="/add">
                     <button type="button" class="btn btn-danger btn-lg" id="reservebutton"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button>
@@ -25,26 +25,70 @@
                 </a>
             </div>
         </div>
-    </div>
-    <div class="container">
-        <h1>Tables Page</h1>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title"><strong>Current Reservations</strong></h3>
+                  </div>
+                  <div class="panel-body" id="well-section">
+                  </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-12">
+
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title"><strong>WaitList</strong></h3>
+              </div>
+              <div class="panel-body" id="well-section">
+
+              </div>
+            </div>
+          </div>
+        </div>
+
         <a id="apitable" href="/api/tables">API Table Link</a>|
         <a id="waitlist" href="/api/waitlist">API Wait List</a>
     </div>
-    <script type="text/javascript">
-    // $("#tablebutton").on("click", function() {
-    //     $.get("/all", function(data) {});
-    // });
-    // $("#reservebutton").on("click", function() {
-    //     $.get("/add", function(data) {});
-    // });
-    $("#apitable").on("click", function() {
-        $.get("/api/tables", function(data) {});
-    });
-    $("#waitlist").on("click", function() {
-        $.get("/api/waitlist", function(data) {});
-    });
-    </script>
+
+      <script type="text/javascript">
+
+        $.get("/api/tables", function(data) {
+          // for (var i = 0; i < data.length; i++) {
+          //   var wellSection = $("<div>");
+          //   wellSection.addClass("well");
+          //   wellSection.attr("id", "character-well-" + i);
+          //   $("#well-section").append(wellSection);
+
+          //   $("#character-well-" + i).append("<h2>" + data[i].name + "</h2>");
+          //   $("#character-well-" + i).append("<h3>Role: " + data[i].role + "</h4>");
+          //   $("#character-well-" + i).append("<h3>Age: " + data[i].age + "</h4>");
+          //   $("#character-well-" + i).append("<h3>Force Points: " + data[i].forcePoints + "</h4>");
+          // }
+        });
+
+        $.get("/api/WaitList", function(data) {
+          // for (var i = 0; i < data.length; i++) {
+          //   var wellSection = $("<div>");
+          //   wellSection.addClass("well");
+          //   wellSection.attr("id", "character-well-" + i);
+          //   $("#well-section").append(wellSection);
+
+          //   $("#character-well-" + i).append("<h2>" + data[i].name + "</h2>");
+          //   $("#character-well-" + i).append("<h3>Role: " + data[i].role + "</h4>");
+          //   $("#character-well-" + i).append("<h3>Age: " + data[i].age + "</h4>");
+          //   $("#character-well-" + i).append("<h3>Force Points: " + data[i].forcePoints + "</h4>");
+          // }
+        });
+      </script>
+
 </body>
 
 </html>
