change /all to /tables

--- a/reserve.html
+++ b/reserve.html
@@ -17,7 +17,7 @@
             <hr>
             <h3 class="text-center">Make your reservation</h3>
             <div class="text-center">
-                <a href="/all">
+                <a href="/tables">
                     <button type="button" class="btn btn-primary btn-lg" id="tablebutton"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
                 </a>
                 <a href="/">
