--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <hr>
             <h3 class="text-center">We only have 5 tables! Book your seat before they all are gone!</h3>
             <div class="text-center">
-                <a href="/all">
+                <a href="/tables">
                     <button type="button" class="btn btn-primary btn-lg" id="tablebutton"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
                 </a>
                 <a href="/add">
